--- a/index.html
+++ b/index.html
@@ -293,7 +293,8 @@
             <h2 class="titulos">Contactos</h2>
             <h4 class="footer__h4">Ponte en contacto conmigo.</h4>
             <div class="footer__contenedor">
-                <form action="">
+                
+                <form  name="contact" method="POST" data-netlify="true">
                     <div class="footer__grupo footer__row">
                         <input type="text" placeholder="Nombre" class="footer__control">
                         <input type="text" placeholder="Apellido" class="footer__control">
