--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <a class="header__links"  href="#portafolio">Portafolio</a>
                 </li>
                 <li class="header__item">
-                    <a class="header__links"  href="#About">Sobre mi</a>
+                    <a class="header__links"  href="#about">Sobre mi</a>
                 </li>
                 <li class="header__item">
                     <a class="header__links"  href="#servicios">Servicios</a>
@@ -62,9 +62,9 @@
                     <a class="header__links"  href="#contactos">Contactos</a>
                 </li>
                 <div class="header__social">
-                    <a href=""><i class='bx bxl-github header__social--icon'></i></a>
-                    <a href=""><i class='bx bxl-linkedin-square header__social--icon' ></i></a>
-                    <a href=""><i class='bx bxl-behance header__social--icon' ></i></a>
+                    <a href="https://www.linkedin.com/in/javier-tovar-46687a177/" target="_blank"><i class='bx bxl-linkedin-square header__social--icon' ></i></a>
+                    <a href="https://github.com/017javier" target="_blank"><i class='bx bxl-github header__social--icon'></i></a>
+                    <a href="https://www.behance.net/javiertovar7" target="_blank"><i class='bx bxl-behance header__social--icon' ></i></a>
                     
                 </div>
             </ul>
@@ -179,7 +179,7 @@
         </section>
         <!-- fin del portafolio -->
         <!-- my about -->
-        <section class="about" id="About">
+        <section class="about" id="about">
 
             <div class="container">
                 <h2 class="titulos"> Sobre mi</h2>
@@ -293,7 +293,7 @@
             <h2 class="titulos">Contactos</h2>
             <h4 class="footer__h4">Ponte en contacto conmigo.</h4>
             <div class="footer__contenedor">
-                
+
                 <form  name="contact" method="POST" data-netlify="true">
                     <div class="footer__grupo footer__row">
                         <input type="text" placeholder="Nombre" class="footer__control">
