--- a/index.html
+++ b/index.html
@@ -296,15 +296,15 @@
 
                 <form  name="contact" method="POST" data-netlify="true">
                     <div class="footer__grupo footer__row">
-                        <label>Your Name:<input type="text" placeholder="Nombre" class="footer__control"></label>
-                        <label>Your Last<input type="text" placeholder="Apellido" class="footer__control"></label>
+                        <input type="text" placeholder="Nombre" class="footer__control">
+                        <input type="text" placeholder="Apellido" class="footer__control">
                     </div>
         
                     <div class="footer__grupo">
-                        <label>Your Email<input type="email" placeholder="Email" class="footer__control"></label>
+                        <input type="email" placeholder="Email" class="footer__control">
                         
                     </div>
-                    <label>Message<textarea name="" placeholder="Mensaje" class="footer__control" id="" cols="30" rows="10"></textarea></label>
+                    <textarea name="" placeholder="Mensaje" class="footer__control" id="" cols="30" rows="10"></textarea>
                     <input type="submit" value="Enviar" class="btn">
                 </form>
             </div>
