--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                         <input type="email" placeholder="Email" class="footer__control">
                         
                     </div>
-                    <textarea name="" placeholder="Mensaje" class="footer__control" id="" cols="30" rows="10"></textarea>
+                    <textarea name="mensaje" placeholder="Mensaje" class="footer__control" id="" cols="30" rows="10" value="mensaje"></textarea>
                     <input type="submit" value="Enviar" class="btn">
                 </form>
             </div>
