--- a/index.html
+++ b/index.html
@@ -296,12 +296,12 @@
 
                 <form  name="contact" method="POST" data-netlify="true">
                     <div class="footer__grupo footer__row">
-                        <input type="text" placeholder="Nombre" class="footer__control">
-                        <input type="text" placeholder="Apellido" class="footer__control">
+                        <input type="text" name="nombre" placeholder="Nombre" class="footer__control">
+                        <input type="text" name="apellido" placeholder="Apellido" class="footer__control">
                     </div>
         
                     <div class="footer__grupo">
-                        <input type="email" placeholder="Email" class="footer__control">
+                        <input type="email" name="email" placeholder="Email" class="footer__control">
                         
                     </div>
                     <textarea name="mensaje" placeholder="Mensaje" class="footer__control" id="" cols="30" rows="10" value="mensaje"></textarea>
