--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
 
     <title>Javier Tovar | Web Developer</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 
@@ -29,8 +27,8 @@
     <header class="header">
         <nav class="header__nav">
 
-            <div class="header__logo" href="#inicio">
-                <img class="header__logo-png" src="./utils/img/logo-javier.svg" width="50px" alt="logo javier tovar, Diseño web, Desarrollo web, web developer, desing web, SEO">
+            <div class="header__logo">
+                <a href="#inicio"><img class="header__logo-png" src="./utils/img/logo-javier.svg" width="50px" alt="logo javier tovar, Diseño web, Desarrollo web, web developer, desing web, SEO"></a>
             </div>
 
             <div class="header__toggle" id="mobile-menu">
@@ -268,7 +266,7 @@
                             <h3 class="blog__h3">Donde aprender html/css/js</h3>
                             <p class="blog__fecha">6 de Mayo 2022</p>
                             <p class="blog__p">Mis mejores canales de youtube para aprender programación web.</p>
-                            <div class="blog__leer"><a href="">Leer mas...</a></div>
+                            <div class="blog__leer"><a href="blog_01.html">Leer mas...</a></div>
                         </div>
                     </div>
 
@@ -278,7 +276,7 @@
                             <h3 class="blog__h3">Recursos para desarrolladores web</h3>
                             <p class="blog__fecha">8 de Mayo 2022</p>
                             <p class="blog__p">Lista de recursos que te puede ayudar en el mundo de la programación.</p>
-                            <div class="blog__leer"><a href="">Leer mas...</a></div>
+                            <div class="blog__leer"><a href="blog_01.html">Leer mas...</a></div>
                         </div>
                     </div>
                 </div>
