--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 
     <title>Javier Tovar | Web Developer</title>
 
+    <!-- fuentes google -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
+
+    <!-- iconos -->
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 
     <!-- style.css -->
