--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <p class="hero__p">Especializado en el desarrollo de marcas personalizadas. Si tiene una
                             empresa que busca presencia en la web o está buscando contratar, contácteme aqui</p>
                         <div class="hero__buttons">
-                            <a href="#" class="btn">Descarga CV</a>
+                            <a download="" href="./utils/pdf/cv__javiertovar.pdf" class="btn">Descarga CV</a>
                             <a href="#portafolio" class="btn secundary-btn">Portafolio</a>
                         </div>
                     </div>
