--- a/blog_01.html
+++ b/blog_01.html
@@ -70,7 +70,7 @@
                     </div>
 
                     <div class="myblog__box">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/-h6hCkSTXIo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/Aj7HLsJenVg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
 
                 </div>
