--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@
         </div>
     </footer>
     <!-- fin footer -->
+    <script src="./utils/js/scrollreveal.min.js"></script>
     <script src="./utils/js/app.js"></script>
 </body>
 </html>
