--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
                 <li class="header__item">
                     <a class="header__links"  href="#contactos">Contactos</a>
                 </li>
-                <div class="header__social">
+                <li class="header__item header__social">
                     <a href="https://www.linkedin.com/in/javier-tovar-46687a177/" target="_blank"><i class='bx bxl-linkedin-square header__social--icon' ></i></a>
                     <a href="https://github.com/017javier" target="_blank"><i class='bx bxl-github header__social--icon'></i></a>
                     <a href="https://www.behance.net/javiertovar7" target="_blank"><i class='bx bxl-behance header__social--icon' ></i></a>
                     
-                </div>
+                </li>
             </ul>
         </nav>
     </header>
