--- a/index.html
+++ b/index.html
@@ -594,8 +594,8 @@
                             <p class="portafolio__p">Landing Page</p>
                             <br>
                             <div class="portafolio__button">
-                                <a class="portafolio__btn" href="#">Ver Demo</a>
-                                <a class="portafolio__btn" href="#">Ver Codigo</a>
+                                <a class="portafolio__btn" href="https://chipper-narwhal-9ee682.netlify.app" target="_blank">Ver Demo</a>
+                                <a class="portafolio__btn" href="https://github.com/017javier/proyect-landing" target="_blank">Ver Codigo</a>
                             </div>
                         </div>
                         <div class="background-hover"></div>
