--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@
             <div class="footer__redes">
                 <a class="footer__a" href="https://www.linkedin.com/in/javier-tovar-46687a177/" target="_blank" >Linkedin</a>
                 <a class="footer__a" href="https://github.com/017javier" target="_blank" >GitHub</a>
-                <a class="footer__a" href="https://www.behance.net/javiertovar7" target="_blank">Behance</a>
+                <a class="footer__a" href="https://www.behance.net/javieralex17fb" target="_blank">Behance</a>
             </div>
             <div class="footer__pie">
                 <p class="footer__copy">Copyright © 2022 javier-tovar.art <br> Diseñado y Programado por Javier Tovar</p>
