--- a/index.html
+++ b/index.html
@@ -582,8 +582,8 @@
                             <p class="portafolio__p">Landing Page</p>
                             <br>
                             <div class="portafolio__button">
-                                <a class="portafolio__btn" href="#">Ver Demo</a>
-                                <a class="portafolio__btn" href="#">Ver Codigo</a>
+                                <a class="portafolio__btn" href="https://grand-melba-7b8407.netlify.app" target="_blank">Ver Demo</a>
+                                <a class="portafolio__btn" href="https://github.com/017javier/landing-page65" target="_blank">Ver Codigo</a>
                             </div>
                         </div>
                         <div class="background-hover"></div>
